--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <nav class="nav container">
                 <a href="#" class=""nav__logo>Anu</a>
                 
-                <div class="namv__menu" id="nav-menu">
+                <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list grid">
                         <li class="nav__items">
                             <a href="#home" class="nav__link">
