--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
                                     165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
                                     129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                     -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
-                                    <image class="home__blob-img" xlink:href="assets/img/profile.png"/>
+                                    <image class="home__blob-img" x='20' y="18" xlink:href="assets/img/profile.png"/>
                                 </g>
                             </svg>                            
                         </div>
                         <div class="home__data">
-                            <h1 class="home__title">Hi, I'm Anu</h1>
+                            <h1 class="home__title">Hi, I'am Anu</h1>
                             <h3 class="home__subtitle">A 4th Year Computer Science Student</h3>
                             <p class="home__description">Medium level  experince in web development.</p>
                             <a href="#contact" class="button button--flex">
