--- a/index.html
+++ b/index.html
@@ -134,7 +134,25 @@
                        <img src="assets/img/about.png" alt="about_img" class="about__img">
                        
                        <div class="about__data">
-                        <p class="about_description"></p>
+                        <p class="about__description">Web developer, with basic knowledge and learning experience of web development and deployment,
+                             working in web technologies like Django, AWS, ReactJS.</p>
+
+                             <div class="about__info">
+                                <div>
+                                    <span class="about__info-title">02+</span>
+                                     <span class="about__info-name">Years <br> experience</span>
+                                </div>
+
+                                <div>
+                                    <span class="about__info-title">01+</span>
+                                     <span class="about__info-name">Completed <br> project</span>
+                                </div>
+                             </div>
+                             <div class="about__buttons">
+                                <a download="" href="assets/pdf/Resume.pdf" class="button button--flex">
+                                    Download CV<i class="uil uil-download-alt button__icon"></i>
+                                </a>
+                             </div>
                        </div>
                     </div>
                 </section>
