--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
             <nav class="nav container">
-                <a href="#" class=""nav__logo>Anu</a>
+                <a href="#" class="nav__logo">Anu</a>
                 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list grid">
@@ -696,7 +696,7 @@
                     </div>
 
                     <form action="" class="contact__form grid">
-                        <div class="contact_input grid">
+                        <div class="contact__inputs grid">
                             <div class="contact__content">
                                 <label for="" class="contact__label">Name</label>
                                 <input type="text" class="contact__input">
