--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
                         </div>
                     </div>
 
-                    <form action="" class="contact__form grid">
+                    <form action=”mailto:anu2614kumar@gmail.com” method=”POST” enctype=”multipart/form-data” name=”EmailForm” class="contact__form grid">
                         <div class="contact__inputs grid">
                             <div class="contact__content">
                                 <label for="" class="contact__label">Name</label>
@@ -722,7 +722,7 @@
                         </div>
 
                         <div>
-                            <a href="" class="button button--flex">
+                            <a href="mailto:anu2614kumar@gmail.com" class="button button--flex">
                                 Send Message
                                 <i class="uil uil-message button__icon"></i>
                             </a>
