--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <div class="home__data">
                             <h1 class="home__title">Hi, I'am Anu</h1>
                             <h3 class="home__subtitle">A 4th Year Computer Science Student</h3>
-                            <p class="home__description">Medium level  experince in web development.</p>
+                            <p class="home__description">Medium level  experince in web development.A pasionate and quick learner.</p>
                             <a href="#contact" class="button button--flex">
                                 Contact Me<i class="uil uil-message button__icon"></i>
                             </a>
