--- a/index.html
+++ b/index.html
@@ -1232,7 +1232,7 @@
                         </div>
 
                         <!-- Testimonial 2 -->
-                        <div class="swiper-slide">
+                        <div class="swiper-slide mt-8">
                             <div class="bg-neutral-800 p-8 rounded-xl">
                                 <div class="flex flex-col items-center text-center">
                                     <div class="w-20 h-20 bg-purple-500 rounded-full flex items-center justify-center mb-4">
@@ -1253,7 +1253,7 @@
                         </div>
 
                         <!-- Testimonial 3 -->
-                        <div class="swiper-slide">
+                        <div class="swiper-slide mt-8">
                             <div class="bg-neutral-800 p-8 rounded-xl">
                                 <div class="flex flex-col items-center text-center">
                                     <div class="w-20 h-20 bg-green-500 rounded-full flex items-center justify-center mb-4">
