--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
       <!-- {bodyScripts} -->
 
    </body>
-</html><element id="0a780b73-115c-43c8-9534-d75bc75dd0c8" data-section-id="0a780b73-115c-43c8-9534-d75bc75dd0c8">
+</html>
 
 <htmlCode>
 <div id="root">
@@ -457,7 +457,7 @@
         }, 100);
     </script>
 </div>
-</htmlCode></element><element id="01d56a3b-b977-44ac-a968-a7c3f3b99240" data-section-id="01d56a3b-b977-44ac-a968-a7c3f3b99240">
+</htmlCode>
 
 <htmlCode>
 <div id="root">
@@ -555,7 +555,7 @@
         });
     </script>
 </div>
-</htmlCode></element><element id="c9710c41-f06c-4755-911a-ba96ed938755" data-section-id="c9710c41-f06c-4755-911a-ba96ed938755">
+</htmlCode>
 
 <htmlCode>
 <div id="root">
@@ -755,7 +755,7 @@
         </div>
     </section>
 </div>
-</htmlCode></element><element id="15996df0-366d-4127-8317-495568ade0ef" data-section-id="15996df0-366d-4127-8317-495568ade0ef">
+</htmlCode>
 
 <htmlCode>
 <div id="root">
@@ -878,7 +878,7 @@
         </div>
     </section>
 </div>
-</htmlCode></element><element id="8452fe79-dd1b-48da-839b-36bfc2de4e39" data-section-id="8452fe79-dd1b-48da-839b-36bfc2de4e39">
+</htmlCode>
 
 <htmlCode>
 <div id="root">
@@ -1069,7 +1069,7 @@
         });
     </script>
 </div>
-</htmlCode></element><element id="f2ec1724-20a8-468e-8605-e24f81afffac" data-section-id="f2ec1724-20a8-468e-8605-e24f81afffac">
+</htmlCode>
 
 <htmlCode>
 <div id="root">
@@ -1196,7 +1196,7 @@
         });
     </script>
 </div>
-</htmlCode></element><element id="2ad68c73-1747-4efe-a337-97b6f38192c3" data-section-id="2ad68c73-1747-4efe-a337-97b6f38192c3">
+</htmlCode>
 
 <htmlCode>
 <div id="root">
@@ -1320,7 +1320,7 @@
         });
     </script>
 </div>
-</htmlCode></element><element id="203dec02-be8c-4f64-b01e-e588e7788917" data-section-id="203dec02-be8c-4f64-b01e-e588e7788917">
+</htmlCode>
 
 <htmlCode>
 <div id="root">
@@ -1452,7 +1452,7 @@
         });
     </script>
 </div>
-</htmlCode></element><element id="6ae42dbe-e516-4e2e-a1b8-d6528781511a" data-section-id="6ae42dbe-e516-4e2e-a1b8-d6528781511a">
+</htmlCode>
 
 <htmlCode>
 <div id="root">
@@ -1556,11 +1556,7 @@
         });
     </script>
 </div>
-</htmlCode></element>
-            <div id="page_complete">
-            <script>
-                console.log('Page complete');
-            </script>
+</htmlCode>
             </body>
             </html>
           
