--- a/index.html
+++ b/index.html
@@ -221,6 +221,20 @@
           }
         }
       </style>
+    <link rel="canonical" href="https://anukumar.run.place" />
+    <script type="application/ld+json">
+        {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Anu Kumar",
+        "jobTitle": "Full Stack Developer",
+        "url": "https://anukumar.run.place",
+        "sameAs": [
+            "https://github.com/trickster26",
+            "https://www.linkedin.com/in/anu-kumar-001"
+        ]
+        }
+    </script>
 
       <!-- Enhanced Image Handler -->
       <script>
