--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Anu Kumar - Full Stack Developer | Python, Node.js, React.js Expert</title>
-      <meta name="description" content="Full Stack Developer specializing in Python, Node.js, React.js, PHP and modern web technologies. Expert in building scalable applications and e-commerce solutions.">
-      <meta name="keywords" content="Full Stack Developer, Python Developer, Node.js Developer, React.js Expert, PHP Developer, Web Development, E-commerce Solutions, Shopify Expert">
+      <title>Anu Kumar | Full Stack Developer & Software Engineer</title>
+      <meta name="description" content="Anu Kumar is a seasoned Full Stack Developer with expertise in Python, React, and Node.js, delivering innovative software solutions and scalable web solutions.">
+      <meta name="keywords" content="Anu Kumar, Full Stack Developer, Python Developer, Node.js Developer, React.js Expert, PHP Developer, Web Development, E-commerce Solutions, Shopify Expert">
       <meta name="author" content="Anu Kumar">
       
       <!-- Open Graph / Facebook -->
@@ -16,6 +16,11 @@
       <meta property="og:description" content="Full Stack Developer specializing in Python, Node.js, React.js, PHP and modern web technologies.">
       <meta property="og:image" content="https://anukumar.run.place/og-image.jpg">
 
+      <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon-16x16.png">
+      <link rel="manifest" href="./assets/img/site.webmanifest">
+      
       <!-- Twitter -->
       <meta property="twitter:card" content="summary_large_image">
       <meta property="twitter:url" content="https://anukumar.run.place">
@@ -443,7 +448,7 @@
                     <div class="flex flex-col lg:flex-row items-center justify-between">
                         <div class="lg:w-1/2 animate__animated animate__fadeInLeft">
                             <h1 class="text-4xl lg:text-6xl font-bold text-white mb-6">
-                                Full Stack Developer
+                                Anu Kumar
                                 <span class="text-blue-500 block">Building Digital Solutions</span>
                             </h1>
                             <p class="text-neutral-400 text-lg mb-8">
