--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       <!-- Icons -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
             integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-            crossorigin="anonymous" referrerpolicy="no-referrer" />
+            crossorigin="anonymous" referrerpolicy="no-referrer" >
 
       <!-- Base Styles -->
       <style>
@@ -289,7 +289,7 @@
           }
         }
       </style>
-        <link rel="canonical" href="https://anukumar.run.place" />
+        <link rel="canonical" href="https://anukumar.run.place" >
 
       <!-- Enhanced Image Handler -->
       <script>
@@ -406,7 +406,7 @@
       </script>
    </head>
    <body class="antialiased text-gray-800 min-h-screen flex flex-col">
-        <main role="main">
+        <main>
             <nav class="fixed w-full bg-neutral-900/90 backdrop-blur-sm z-50 px-4 py-3">
                 <div class="container mx-auto flex justify-between items-center">
                     <a href="#" class="text-white text-2xl font-bold">Anu<span class="text-blue-500">Kumar</span></a>
